--- a/src/client/public/style.css
+++ b/src/client/public/style.css
@@ -14,7 +14,26 @@ font-family:'Bookman Old Style Pro Grk W04';
 font-family:'Bookman Old Style Pro G1458292';
 font-family:'Bookman Old Style Pro G1458294';
 font-family:'Bookman Old Style ProGr1458296';
+
 */
+@font-face {
+  font-family: 'BodoniFLF-Italic';
+  src: url('./assets/fonts/BodoniFLF-Italic.eot?#iefix') format('embedded-opentype'),  url('./assets/fonts/BodoniFLF-Italic.woff') format('woff'), url('./assets/fonts/BodoniFLF-Italic.ttf')  format('truetype'), url('./assets/fonts/BodoniFLF-Italic.svg#BodoniFLF-Italic') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'BodoniFLF-Roman';
+  src: url('./assets/fonts/BodoniFLF-Roman.eot?#iefix') format('embedded-opentype'),  url('./assets/fonts/BodoniFLF-Roman.woff') format('woff'), url('./assets/fonts/BodoniFLF-Roman.ttf')  format('truetype'), url('./assets/fonts/BodoniFLF-Roman.svg#BodoniFLF-Roman') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+p
+{
+  font-family: 'Bookman Old Style W01';
+}
 
 .site-wrapper
 {
@@ -136,7 +155,31 @@ font-family:'Bookman Old Style ProGr1458296';
   transition: all ease-in 300ms;
 }
 
-.work-item
+.nav-inner .menu-btn
+{
+  top:15px;
+}
+
+.timeline
+{
+  position: absolute;
+  top:17px;
+  left: 120px;
+  cursor: pointer;
+}
+
+.timeline p
+{
+  font-size: 18px;
+  font-family:'BookmanOldStyleW10-Bold';
+}
+
+.timeline .fa
+{
+  padding-right: 10px;
+}
+
+.work-item, .client-item
 {
   position: relative;
   min-height:250px;
@@ -149,14 +192,15 @@ font-family:'Bookman Old Style ProGr1458296';
   display: flex;  
   align-items: center;
   justify-content: center;
-  color:#fff;
-  font-size: 22px;
+  color:#fff;  
   text-shadow: 1px 1px 0px #303030;
-  font-weight: 900;
+  text-align: center;
+  flex-direction: column;
 }
 
-.work-label
+.work-label, .client-label
 {
+  display: block;
   opacity: 0;
   -webkit-transition: all ease-in 300ms;
   -moz-transition: all ease-in 300ms;
@@ -164,12 +208,31 @@ font-family:'Bookman Old Style ProGr1458296';
   transition: all ease-in 300ms;
 }
 
+label.work-label, label.client-label
+{
+  font-family: 'BookmanOldStyleW10-Bold';
+  font-size: 22px;
+}
+
+small.work-label, small.client-label
+{
+  font-family: 'BookmanOldStyleW10-Bold';
+  font-size: 16px;
+}
+
 .show
 {
   opacity: 1;
 }
 
-.work-item .overlay
+.inner-menu
+{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+.work-item .overlay, .client-item .overlay
 {
   width: 100%;
   height: 100%;
@@ -184,7 +247,7 @@ font-family:'Bookman Old Style ProGr1458296';
   transition: all ease-in 300ms;
 }
 
-.work-item .overlay:hover
+.work-item .overlay:hover, .client-item .overlay:hover
 {
   opacity: 0;
 }
@@ -215,13 +278,13 @@ font-family:'Bookman Old Style ProGr1458296';
 
 .outer-circle
 {
-  width: 400px;
+  width: 450px;
   /*max-width:500px;*/
   /*min-width:300px;*/
   margin: 0 auto;
   border-radius: 50%;
   /*margin-top:10%;*/
-  height: 400px;
+  height: 450px;
   /*max-height:500px;*/
   /*min-height:300px;*/
   border:1px solid rgba(255,255,255,0.5);
@@ -272,7 +335,7 @@ font-family:'Bookman Old Style ProGr1458296';
   transition: all 300ms;
 }
 
-.dot { width: 10px; height: 10px; position: absolute; background: #fff; border-radius: 50%; opacity:1; cursor: pointer;}
+.dot { width: 5px; height: 5px; position: absolute; background: #fff; border-radius: 50%; opacity:1; cursor: pointer;}
 
 .dot-active
 {
@@ -386,10 +449,16 @@ font-family:'Bookman Old Style ProGr1458296';
   top:20px;
   left: 20px;
   z-index: 30;
+  font-size: 18px;
   background: none;
   color:#fff;
   border: 0px;
   outline: none;
+}
+
+.menu-btn span
+{
+  font-family:'BookmanOldStyleW10-Bold';
 }
 
 .menu 
@@ -419,6 +488,13 @@ font-family:'Bookman Old Style ProGr1458296';
   border:15px solid #9d7a47;
 }
 
+#about-detail
+{
+  background:#a98a5d;
+  border:15px solid #9d7a47;
+  color: #fff;
+}
+
 .menu > div.left {
   left: -100%;
 }
@@ -440,10 +516,19 @@ font-family:'Bookman Old Style ProGr1458296';
   /*border-bottom: solid 1px #555;*/
   cursor: pointer;
   color: #fff;
-  font-size: 24px;
-  font-family:'BookmanOldStyleW10-Bold';
-  font-weight: 900;
+  font-size: 30px;
+  font-family: 'BookmanOldStyleW10-Bold';
+  opacity: 0.6;
+  -webkit-transition: all 300ms;
+  -moz-transition: all 300ms;
+  -o-transition: all 300ms;
+  transition: all 300ms;
 
+}
+
+.menu-item:hover
+{
+  opacity: 1;
 }
 
 #menu-logo
@@ -453,8 +538,9 @@ font-family:'Bookman Old Style ProGr1458296';
 
 #menu-grey
 {
-  margin-top: 180px;
+  margin-top: 225px;
   width: 150px;
+  display: block;
 }
 
 .indicator
@@ -465,6 +551,7 @@ font-family:'Bookman Old Style ProGr1458296';
   bottom:20px;
   left: 0px;
   width: 100%;
+  
 }
 
 .indicator .fa
@@ -476,20 +563,41 @@ font-family:'Bookman Old Style ProGr1458296';
 
 .indicator p
 {
-  font-size: 14px;
+  font-family: 'BookmanOldStyleW10-Bold';
+  font-size: 18px;
 }
 
 @media screen and (max-width: 768px) {
+  .indicator
+  {
+    bottom: 100px;
+  }
+
+  #copyright
+  {
+    width: 100%;
+    text-align: center;
+    bottom: 10px;
+    left: 0px;
+  }
+
+  .footer-right
+  {
+    width: 100%;
+    bottom: 40px;
+    left: 0px;
+    text-align: center;
+  }
 
   .outer-circle
   {
-    width: 300px;
+    width: 250px;
     /*max-width:500px;*/
     /*min-width:300px;*/
     margin: 0 auto;
     border-radius: 50%;
     /*margin-top:10%;*/
-    height: 300px;
+    height: 250px;
     /*max-height:500px;*/
     /*min-height:300px;*/
     border:1px solid rgba(255,255,255,0.5);
